// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render correctly as snapshot 1`] = `
<div
  id="container"
  onClick={[Function]}
>
  <div
    className="label"
    key="0"
  >
    123
  </div>
</div>
`;

exports[`Card when container click should change state isShow 1`] = `
<Card
  rows={Array []}
>
  <div
    id="container"
    onClick={[Function]}
  >
    <div
      className="null-message"
    >
      Null
    </div>
    <div>
      Show Label
    </div>
  </div>
</Card>
`;
